--- a/index.html
+++ b/index.html
@@ -153,28 +153,29 @@
         <br>
         <span class="dmoney">NT$600</span>
         <hr>
-        <span class="dnum">9957人 已贊助</span>
+        <div class="dnums"><span class="dnum">9957</span><span>人 已贊助</span></div>
+        
       </div>
       <div class="singledonate col-sm-6" id="num02" onclick="slectId('num02')">
         <span class="dname">喵星之夜</span>
         <br>
         <span class="dmoney">NT$1000</span>
         <hr>
-        <span class="dnum">9957人 已贊助</span>
+        <div class="dnums"><span class="dnum">9957</span><span>人 已贊助</span></div>
       </div>
       <div class="singledonate col-sm-6" id="num03" onclick="slectId('num03')">
         <span class="dname">喵星之夜</span>
         <br>
         <span class="dmoney">NT$2000</span>
         <hr>
-        <span class="dnum">9957人 已贊助</span>
+        <div class="dnums"><span class="dnum">9957</span><span>人 已贊助</span></div>
       </div>
-      <div class="singledonate col-sm-6">
+      <div class="singledonate col-sm-6" id="num04" onclick="slectId('num04')">
         <span class="dname">喵星之夜</span>
         <br>
         <input type="number" placeholder="請輸入金額" min="0" value="100" class="py-2 dimput">
         <hr>
-        <span class="dnum">9957人 已贊助</span>
+        <div class="dnums"><span class="dnum">9957</span><span>人 已贊助</span></div>
       </div>
       
       <div class="d-flex justify-content-center">
