--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
       </div>
 
       
-      <div class="d-flex justify-content-center donatetext">
-        <span> 目前贊助總金額 : </span>
-        <span id="totalnum">987,655,873</span>
+      <div class="d-flex justify-content-center donatetext align-items-center flex-column">
+        <span style="font-size: 20px;" class="m-0 p-0"> 目前贊助總金額</span>
+        <span id="totalnum" class="m-0 p-0">987,655,873</span>
       </div>
     </div>
   </div>
